[NNO-10856] - Упразднение dialog валидации